--- a/Codebase/Typerr/Components/NavPanel.xaml
+++ b/Codebase/Typerr/Components/NavPanel.xaml
@@ -41,7 +41,8 @@
                      GroupName="NavButtons"
                      Height="50"                                                             
                      Foreground="White"                                 
-                     FontSize="14"                                 
+                     FontSize="14"
+                     IsChecked="{Binding RadioSubscriptionsIsChecked}"
                      Style="{StaticResource MenuButtonTheme}"
                      Command="{Binding GoToSubscriptionsCommand}"/>
 
