--- a/Codebase/Typerr/View/HomeView.xaml
+++ b/Codebase/Typerr/View/HomeView.xaml
@@ -97,20 +97,79 @@
             </Grid>
             <!--#endregion-->
             <!--#region Feed-->
-            <StackPanel Height="{Binding FeedContentHeight}">
-        <TextBlock Text="Feed"
+            <TextBlock Text="Feed"
                    Foreground="Black"
                    FontWeight="Bold"
                    FontSize="24"
                    HorizontalAlignment="Left"
                    Margin="30,20,0,20"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="46"/>
+                </Grid.ColumnDefinitions>
+                
 
-            <WrapPanel x:Name="FeedContent"
-                    Margin="20,0,0,20">
-                <ItemsControl ItemsSource="{Binding FeedTileViewModels}"
-                              Height="{Binding FeedContentHeight}"/>
-            </WrapPanel>
-            </StackPanel>
+                <WrapPanel x:Name="FeedContent"
+                            Orientation="Horizontal"
+                           Margin="20,0,0,20">
+                    <ItemsControl ItemsSource="{Binding FeedTileViewModels}"
+                              Height="{Binding FeedContentHeight}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <components:FeedTile Margin="0,0,5,10"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                </WrapPanel>
+                <Button Grid.Column="1"
+                    Background="White"
+                    HorizontalAlignment="Right"
+                    BorderThickness="0" 
+                    Width="46" 
+                    Command="{Binding GoToSubscriptionsCommand}">
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="wButton" 
+                                                Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" 
+                                                     Value="True">
+                                                <Setter Property="Background" 
+                                                        Value="#eee" 
+                                                        TargetName="wButton" />
+                                            </Trigger>
+                                            <Trigger Property="IsPressed" 
+                                                     Value="True">
+                                                <Setter Property="Background"
+                                                        Value="#ddd" 
+                                                        TargetName="wButton" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                    <Button.ToolTip>
+                        Go to subscriptions
+                    </Button.ToolTip>
+                    <iconPacks:PackIconCoolicons Kind="ChevronRight" 
+                                    Foreground="{StaticResource AppTheme}" 
+                                    />
+
+                </Button>
+            </Grid>
             <!--#endregion-->
             <!--#region Subscriptions-->
             <TextBlock Text="Subscriptions"
@@ -152,9 +211,8 @@
                     HorizontalAlignment="Right"
                     BorderThickness="0" 
                     Width="46" 
-                    
-                        >
-                    <!--Command="{Binding GoToSubscriptionsCommand}"-->
+                    Command="{Binding GoToSubscriptionsCommand}">
+                   
                     <Button.Style>
                         <Style TargetType="{x:Type Button}">
                             <Setter Property="Template">
@@ -184,7 +242,7 @@
                         </Style>
                     </Button.Style>
                     <Button.ToolTip>
-                        Go to library
+                        Go to subscriptions
                     </Button.ToolTip>
                     <iconPacks:PackIconCoolicons Kind="ChevronRight" 
                                     Foreground="{StaticResource AppTheme}" 
