Bugfix Item Preview title clipping

--- a/Codebase/Typerr/View/ItemPreviewView.xaml
+++ b/Codebase/Typerr/View/ItemPreviewView.xaml
@@ -47,12 +47,10 @@
                            >
 
                             <TextBlock TextWrapping="Wrap" 
-                                       Width="540" 
+                                       Width="520" 
                                        TextTrimming="CharacterEllipsis"
                                        FontSize="28"
-                            Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"
-                                   />
-
+                                       Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"/>
 
                         </Label>
                     </Border>
