--- a/Codebase/Typerr/Components/SubTile.xaml
+++ b/Codebase/Typerr/Components/SubTile.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Typerr.Components" 
-             xmlns:viewmodel="clr-namespace:Typerr.ViewModel" 
+             xmlns:viewmodel="clr-namespace:Typerr.ViewModel" xmlns:fa="clr-namespace:Meziantou.WpfFontAwesome;assembly=Meziantou.WpfFontAwesome"
              d:DataContext="{d:DesignInstance Type=viewmodel:SubTileViewModel}"
              mc:Ignorable="d">
     <Border Width="150"
@@ -23,6 +23,7 @@
             <Grid>
                 <Button OpacityMask="#222"
                         BorderThickness="0"
+                        IsHitTestVisible="{Binding IsHitTestVisible}"
                         Command="{Binding SubTileCommand}">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
@@ -84,6 +85,63 @@
                                        TextAlignment="Center"
                                        Text="{Binding Name}"/>
                         </Label>
+                </Button>
+                <Button HorizontalAlignment="Right"
+                        VerticalAlignment="Top"
+                        BorderThickness="0" 
+                        Width="46" 
+                        Height="46"
+                        Background="Transparent"
+                        IsHitTestVisible="True"
+                        Visibility="{Binding DeleteButtonVisibility}"
+                        Command="{Binding RemoveSubscriptionCommand}">
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="wButton" 
+                                                Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" 
+                                                     Value="True">
+                                                <Setter Property="Background" 
+                                                        Value="#eee" 
+                                                        TargetName="wButton" />
+                                            </Trigger>
+                                            <Trigger Property="IsPressed" 
+                                                     Value="True">
+                                                <Setter Property="Background"
+                                                        Value="#ddd" 
+                                                        TargetName="wButton" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Grid>
+                                <Ellipse Width="19"
+                         Height="19"
+                         Stroke="Transparent"
+                         Fill="Transparent"
+                         StrokeThickness="5"/>
+                                <Border Width="50"
+                           Height="50"
+                        BorderThickness="4"
+                        CornerRadius="2"/>
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Grid>
+                        </ControlTemplate>
+                    </Button.Template>
+                    <fa:FontAwesomeIcon SolidIcon="TimesCircle" 
+                                    Foreground="#FFeF2000" 
+                                    FontSize="19"/>
                 </Button>
             </Grid>
         </Border>
